Design Doc finished

--- a/Documents/NewDesignDoc/overview.tex
+++ b/Documents/NewDesignDoc/overview.tex
@@ -12,16 +12,16 @@ Current team members include Hannah Aker. The team is named ``Crowd Science''.
 Clients are Dr. Mengyu Qiao, assistant professor at South Dakota School of Mines and Technology (SDSMT) in the Computer Science Department, and Gail Schmidt, software engineer at Stinger Ghaffarian Technologies (SGT).
 
 \section{Project}
-The Crowd Science Mapper project entails creating a proof-of-concept generic crowdsourcing website. This website will demonstrate that crowdsourcing can be accomplished with generic, easy to use interfaces. This interface will allow ordinary users to report information with an event reporting interface and view information with an event viewing interface.
+The Crowd Science Mapper project entails creating a proof-of-concept generic crowd-sourcing website. This website will demonstrate that crowd-sourcing can be accomplished with generic, easy to use interfaces. This interface will allow ordinary users to report information with an event reporting interface and view information with an event viewing interface.
 
 \subsection{Purpose of the System}
 As a proof-of-concept project, the purpose of this project is to prove that a generic interface for ordinary users to report events and view events can be created.
 
 \section{Academic Need}
-Currently, there exsist various crowd science mappers designed and implemented for a specific set of events, such as bird sightings and butterfly sightings. Most researchers would need to contract a software designer to implement a crowdsourcing tool for a specific research area, costing time and money. A generic, open-source toolkit or website would provide researchers an easy to use, generic crowdsourcing tool to allow researchers to quickly and inexpensively start new crowd science projects. 
+Currently, there exist various crowd science mappers designed and implemented for a specific set of events, such as bird sightings and butterfly sightings. Most researchers would need to contract a software designer to implement a crowd-sourcing tool for a specific research area, costing time and money. A generic, open-source tool-kit or website would provide researchers an easy to use, generic crowd-sourcing tool to allow researchers to quickly and inexpensively start new crowd science projects. 
 
 \section{Deliverables}
-The deliverables in this project will be a proof-of-concept generic crowd sourcing website. This website will feature interfaces for users to view events and report events. The scope of this project does not include moblie applications. 
+The deliverables in this project will be a proof-of-concept generic crowd sourcing website. This website will feature interfaces for users to view events and report events. The scope of this project does not include mobile applications. 
 
 \section{System Description}
 
@@ -38,10 +38,10 @@ Researchers and ordinary citizens will be able to report events that can then be
 Researchers and ordinary citizens will be able to view event reports in a map representation, with greater event report detail provided below the map, and an image carousel to the side. The map will feature pins that show information about the event when hovered over, and will navigate to the individual event report when clicked. The detailed list will contain all information about the event reports in the event set. Event report details/fields will change based on the currently selected event set.
 
 \section{Systems Goals}
-The goal of this system is to provide a generic crowdsourcing website, that is versatile for any type of data researchers want to research, easy and intuitive enough for any user to report events and view data, and reliable and secure enough for academic use.
+The goal of this system is to provide a generic crowd-sourcing website, that is versatile for any type of data researchers want to research, easy and intuitive enough for any user to report events and view data, and reliable and secure enough for academic use.
 
 \section{System Overview and Diagram}
-The webpage will consist of the major components, listed above. The main page will contain a map , image carousel, and detailed list of events for the selected event set. There will be a button on the main page that will take the user to a reporting interface. The navigation bar links will allow a user to select an event set to use, register, login, and logout. See Figure~\ref{overviewdesign}.
+The web-page will consist of the major components, listed above. The main page will contain a map , image carousel, and detailed list of events for the selected event set. There will be a button on the main page that will take the user to a reporting interface. The navigation bar links will allow a user to select an event set to use, register, login, and logout. See Figure~\ref{overviewdesign}.
 
 \begin{figure}[tbhp!]
 \begin{center}
@@ -51,9 +51,9 @@ The webpage will consist of the major components, listed above. The main page wi
 \end{figure}
 
 \section{Technologies Overview}
-This section contains a list of specific technologies used to develop the system.  See Table~\ref{technologies}.  
+This section contains a list of specific technologies used to develop the system.  See Figure~\ref{technologies}.  
 
-\begin{table}[tbhp!]
+\begin{figure}[tbhp!]
 \caption{Technologies Used \label{technologies}}
 \begin{center}
 \begin{tabular}{|>{\raggedright}p{2cm}|>{\raggedright}p{4cm}|>{\raggedright}p{4cm}|>{\raggedright}p{4cm}|}
@@ -63,11 +63,11 @@ This section contains a list of specific technologies used to develop the system
 \hline
  \textit{\textbf{Apache 2.0}} & \textit{Used for website server hosting.} & \textit{\url{http://httpd.apache.org/docs/2.0/}} & \textit{Used to host Crowd Science Mapper website.}\tabularnewline
 \hline
- \textit{\textbf{HTML}} & \textit{Hypertext Markup Language, basic webpage scripting language.} & \textit{\url{http://html.net/}} & \textit{Used to create webpage layouts and load JavaScript files.}\tabularnewline
+ \textit{\textbf{HTML}} & \textit{Hypertext Markup Language, basic web-page scripting language.} & \textit{\url{http://html.net/}} & \textit{Used to create web-page layouts and load JavaScript files.}\tabularnewline
  \hline
-  \textit{\textbf{JavaScript}} & \textit{More advanced language to create more complex objects.} & \textit{\url{http://html.net/}} & \textit{Used to communciate between PHP and HTML create more complex objects, such as the event map.}\tabularnewline
+  \textit{\textbf{JavaScript}} & \textit{More advanced language to create more complex objects.} & \textit{\url{http://html.net/}} & \textit{Used to communicate between PHP and HTML create more complex objects, such as the event map.}\tabularnewline
  \hline
-  \textit{\textbf{PHP}} & \textit{Hypertext Preprocesser, used with HTML to provide stateful webpages.} & \textit{\url{http://html.net/}} & \textit{Used to send and recieve information from the Mongo Database.}\tabularnewline
+  \textit{\textbf{PHP}} & \textit{Hypertext Preprocessor, used with HTML to provide stateful web-pages.} & \textit{\url{http://html.net/}} & \textit{Used to send and receive information from the Mongo Database.}\tabularnewline
  \hline
   \textit{\textbf{CSS}} & \textit{Cascading Style Sheet, used to create a unified look and feel for websites.} & \textit{\url{http://html.net/}} & \textit{Used to create look and feel of Crowd Science Mapper.}\tabularnewline
  \hline
@@ -75,5 +75,5 @@ This section contains a list of specific technologies used to develop the system
 \hline
 \end{tabular}
 \end{center}
-\end{table}
+\end{figure}
 
