--- a/Documents/NewDesignDoc/preparation.tex
+++ b/Documents/NewDesignDoc/preparation.tex
@@ -2,7 +2,7 @@
 
 
 
-Current Version [2.6.0]
+Current Version [2.6.5]
 \vspace*{5mm}
 
 {\color{SDColor5}
@@ -44,7 +44,15 @@ Current Version [2.6.0]
 \hline
  \textit{\textbf{3/20/16}} & \textit{Hannah Aker} & \textit{2.6.0} & \textit{Created Architecture and System design diagram, and edited associated sections.}\tabularnewline
 \hline
- \textit{\textbf{3/20/16}} & \textit{Hannah Aker} & \textit{2.6.1} & \textit{Created GUI design and database design diagrams, and edited associated sections. Started tracibility matrix.}\tabularnewline
+ \textit{\textbf{3/22/16}} & \textit{Hannah Aker} & \textit{2.6.1} & \textit{Created GUI design and database design diagrams, and edited associated sections. Started traceability matrix.}\tabularnewline
+\hline
+ \textit{\textbf{4/12/16}} & \textit{Hannah Aker} & \textit{2.6.2} & \textit{Added Doxygen Documentation.}\tabularnewline
+\hline
+ \textit{\textbf{4/22/16}} & \textit{Hannah Aker} & \textit{2.6.3} & \textit{Finalized Design Section.}\tabularnewline
+\hline
+ \textit{\textbf{4/26/16}} & \textit{Hannah Aker} & \textit{2.6.4} & \textit{Finalized Testing Section.}\tabularnewline
+\hline
+ \textit{\textbf{4/27/16}} & \textit{Hannah Aker} & \textit{2.6.5} & \textit{Finalized Future Work, and User Documents Section.}\tabularnewline
 \hline
 \end{tabular}
 \vfill
