--- a/Documents/NewDesignDoc/productdescription.tex
+++ b/Documents/NewDesignDoc/productdescription.tex
@@ -10,9 +10,9 @@ Dr. Mengyu Qiao
 
 Crowd Science (also known as Citizen Science) aims at soliciting ideas, findings, and information to support scientific research, which could reduce time and cost for data acquisition and enhance the accuracy and generality of research results.  Inspired by USGS Did You Feel It (DYFI) project, USGS Butterflies and Moths of North America (BAMONA) project, and Cornell’s eBird project, a group of professors and students from SDSMT partnered with SGT, Inc. to develop a Landscape Change Mapper (LC Mapper) system, which provides a mechanism for citizens and scientists to identify and track landscape change, thus extending the observational resources available to scientists and deepening the awareness and understanding of ecological issues by the public participants.
 
-In recognition of the growing demand for crowdsourcing in scientific research and the commonalities in various websites relying on citizens to assist in tracking and reporting science as it is happening, it will be helpful to develop a set of generic crowdsourcing system framework and toolkits, which can be customized by ordinary users with no programming experience using graphical user interface. The configurable features of the framework may include user input and display items, database design, digital map, webpage color and style, logo, etc. 
+In recognition of the growing demand for crowd-sourcing in scientific research and the commonalities in various websites relying on citizens to assist in tracking and reporting science as it is happening, it will be helpful to develop a set of generic crowd-sourcing system framework and tool-kits, which can be customized by ordinary users with no programming experience using graphical user interface. The configurable features of the framework may include user input and display items, database design, digital map, web-page color and style, logo, etc. 
 
-The Crowd Science Mapper will be a proof-of-concept project which spans across the areas of GIS/geospatial, cloud, crowd sourcing, citizen science, mobile applications, agile development, open source software, and open source data. The expected product comprises three components: 1) a configurable website that allows public participants to report and view events with visual help of a digital map; 2) a configurable mobile application with the same core features of the public website; 3) an administration website that allows administrators to customize and modify the public system design using graphical user interface, and allows scientists and moderators to control and analyze users’ reports.
+The Crowd Science Mapper will be a proof-of-concept project which spans across the areas of GIS/geospatial, cloud, crowd sourcing, citizen science, mobile applications, agile development, open source software, and open source data. The expected product comprises three components: 1) a configurable website that allows public participants to report and view events with visual help of a digital map; 2) a configurable mobile application with the same core features of the public website; 3) an administration website that allows administrators to customize and modify the public system design using graphical user interface, and allows scientists and moderators to control and analyse users’ reports.
 
 \section{Useful Links}
 USGS Did You Feel It website: http://earthquake.usgs.gov/earthquakes/dyfi
