--- a/Documents/NewDesignDoc/requirements.tex
+++ b/Documents/NewDesignDoc/requirements.tex
@@ -20,69 +20,70 @@ As a user, I want to be able to report an event set. I want my event report to i
 As a user, I want to be able to view a visual map representation of event reports, an image carousel, and a detailed list of event reports. I want to be taken to a page with more information when I click on an event.
 
 \section{Requirements and Design Constraints}
-This project will be a HTML based webpage using JavaScript JQueries to connect to post to PHP files which will query a Mongo database, and hosted on an Apache server.
+This project will be a HTML based web-page using JavaScript JQueries to connect to post to PHP files which will query a Mongo database, and hosted on an Apache server.
 
 \subsection{System  Requirements}
-Webpage should be able to run on all operating systems and all internet browsers. This project is not required to have mobile functionality. 
+Web-page should be able to run on all operating systems and all internet browsers. This project is not required to have mobile functionality. 
 
 \subsection{Network Requirements}
 This project will be server based, hosted on an Apache 2.0 server, access supplied to us by Gail Schmidt. The server is a cloud based server operated by SGT. Information about Apache 2.0 servers can be found here: \url{http://httpd.apache.org/docs/2.0/}. 
 
 \section{Product Backlog}
-The product backlog is directly derived from the user stories, but much more refined. Each product backlog item will map directly to test cases in a tracibility matrix.
+The product backlog is directly derived from the user stories, but much more refined. Each product backlog item will map directly to test cases in a traceability matrix.
 
 \subsection{Navigation Bar}
 \begin{itemize}
 \item Each page shall contain a navigation bar at the top of the page.
-\item The navigation bar will have buttons for logging in, new user registration, logout, and event reporting, where appropiate.
+\item The navigation bar will have buttons for logging in, new user registration, logout, and event reporting, where appropriate.
 \item When no user is logged in, there will be buttons in the navigation bar leading to a new user registration page and a user login page.
+\item When the user is logged in, an icon indicating the logged in user and a log out button will replace the login button on the navigation bar.
+\end{itemize}
+
+\subsection{Event Set Selection}
+\begin{itemize}
 \item The navigation bar shall contain a drop down box for selecting the event set.
 \item The selected event set shall maintain its state when navigating to a different page or refreshing the page.
-\item When the user is logged in, an icon indicating the logged in user and a log out button will replace the login button on the navigation bar.
-\item User will be able to select from a drop down menu on the index and report pages which event data set to view. 
-\item When the current event data set is changed, the map, event list, image carousel, and report features will change according to the feilds specified for that set.
+\item When the current event data set is changed, the map, event list, image carousel, and report features will change according to the fields specified for that set.
 \end{itemize}
 
 \subsection{New User Registration}
 \begin{itemize}
-\item The registration page will have a feild for username, password and password verification, and a ``submit'' button.
-\item If the passwords do not match, the user will be notified, and need to reenter one or both passwords.
+\item The registration page will have a field for username, password and password verification, and a ``submit'' button.
+\item If the passwords do not match, the user will be notified, and need to re-enter one or both passwords.
 \item After registering, a user will automatically be logged in.
 \end{itemize}
 
 \subsection{User Login}
 \begin{itemize}
 \item The login page will have fields for entering username and passwords, a ``login'' button and a link to the user registration page.
-\item The user will be notified if the username or password was incorrect, and may need to reenter one or both feilds.
+\item The user will be notified if the username or password was incorrect, and may need to re-enter one or both fields.
 \end{itemize}
 
-\subsection{Event reporting interface}
+\subsection{Event Reporting Interface}
 \begin{itemize}
-\item When a user is logged in, the user is listed as the author of the report.
-\item When no user is logged in, the author of the report is saved as ``Annonymous''.
-\item Every event report shall include a longitude and latitude feild.
 \item The event reporting window shall contain a map for selecting the latitude and longitude of the event.
 \item The event reporting window shall contain the feilds specified for that event data set.
 \item The event reporting window shall contain an interface for uploading images with the event report.
 \item The event reporting window shall contain a submit button.
 \item When the user clicks submit, the report is added to the database.
+\item When a user is logged in, the user is listed as the author of the report.
+\item When no user is logged in, the author of the report is saved as ``Anonymous''.
+\item Every event report shall include a longitude and latitude field.
 \end{itemize}
 
-\subsection{Detailed event list}
+\subsection{Detailed Event List}
 \begin{itemize}
 \item The detailed event list will be a table of the current event set, and will include all feilds specified for that event data set.
 \item Each entry shall include the author of the event.
 \item Each entry shall include links to the individual event page and to center the map on that event.
 \end{itemize}
 
-\subsection{Map representation of events}
+\subsection{Map Representation of Events}
 \begin{itemize}
-\item The map shall be a visual representation of the event data set. 
 \item The map shall contain a marker for each event report, placed at the longitude and latitude specified in the report.
-\item When a marker on the map is clicked on, a popup will appear with the picture associated with the event report, and the event report details. 
-\item When an event report popup is clicked, the user will be navigated to the individual event page.
+\item When a marker on the map is clicked on, a pop-up will appear with the picture associated with the event report, and the event report details. 
+\item When an event report pop-up is clicked, the user will be navigated to the individual event page.
 \item The map will be able to be zoomed in, zoomed out, and panned.
-\item Entries in the event list will be highlighted when a marker is hovered over or clicked.
 \end{itemize}
 
 \subsection{Event Set Image Carousel}
