--- a/Documents/NewDesignDoc/sprint1.tex
+++ b/Documents/NewDesignDoc/sprint1.tex
@@ -10,7 +10,7 @@ Primary users will be the everyday citizen, interested in reporting some event, 
 \subsubsection{Project Goal}
 The goal of this project to improve on the idea originally presented in the Landscape Change Mapper, and expand on it to create a flexible interface for other kinds of events.
 \subsubsection{User Needs}
-Primary users need all the core fonctionality of the Landscape Change Mapper to be maintained.These functions include, but are not limited to:
+Primary users need all the core functionality of the Landscape Change Mapper to be maintained.These functions include, but are not limited to:
 \begin{itemize}
 \item Visual map representation of events
 \item Detailed event list
@@ -19,20 +19,20 @@ Primary users need all the core fonctionality of the Landscape Change Mapper to 
 \item User login
 \end{itemize}
 Users also need to be able to select which set of events they would like to view.
-Administrators need to be able to customize a set of events to fit my needs. This may include user input and display items, database design, digital map, webpage color and style, logo, etc. Administrators will also need to be able to edit existing event reports.
+Administrators need to be able to customize a set of events to fit my needs. This may include user input and display items, database design, digital map, web-page color and style, logo, etc. Administrators will also need to be able to edit existing event reports.
 \subsection{Project Overview}
-The Crowd Science Mapper will be a generic crowdsourcing system framework and toolkits, which can be customized by ordinary users with no programming experience using graphical user interface
+The Crowd Science Mapper will be a generic crowd-sourcing system framework and tool-kits, which can be customized by ordinary users with no programming experience using graphical user interface
 \subsection{Project Environment}
 \subsubsection{Project Boundaries}
 While the previous project included a mobile application, this project will not because the team is smaller. This project will be solely web-based. 
 \subsubsection{Project Context}
 This project will use the same general context that the Landscape Change Mapper used.  
 \subsubsection{Technical Environment}
-This project will use the same enviroment used in the Landscape Change Mapper. This will use HTML, PHP and Java Script to connect to a Mongo Database, and was hosted on an Apache 2.2 Server.
+This project will use the same environment used in the Landscape Change Mapper. This will use HTML, PHP and Java Script to connect to a Mongo Database, and was hosted on an Apache 2.2 Server.
 \subsubsection{Current systems overview}
-The Landscape Change Mapper webpages used HTML, PHP and Java Script to connect to a Mongo Database, and was hosted on an Apache 2.2 Server. The webpage contained a map of events, detailed event list, event reporting interface, user login, and new user registration. The project included a mobile app with an event reporting interface. 
+The Landscape Change Mapper web-pages used HTML, PHP and Java Script to connect to a Mongo Database, and was hosted on an Apache 2.2 Server. The web-page contained a map of events, detailed event list, event reporting interface, user login, and new user registration. The project included a mobile application with an event reporting interface. 
 \subsection{Project Deliverables}
-The project deliverable will be a proof-of-concept webpage with the features listed in the backlog.
+The project deliverable will be a proof-of-concept web-page with the features listed in the backlog.
 \subsection{Backlog}
 The following features need to be added to this project:
 \begin{itemize}
@@ -43,7 +43,7 @@ The following features need to be added to this project:
 \item User login
 \item User selection of data set to view
 \item Administrator login
-\item Administrator customization of event sets, including user input and display items, database design, digital map, webpage color and style, logo, etc. 
+\item Administrator customization of event sets, including user input and display items, database design, digital map, web-page color and style, logo, etc. 
 \item Administrator editing of existing event reports
 \end{itemize}
 \subsection{Potential Issues}
