--- a/Documents/NewDesignDoc/sprint3.tex
+++ b/Documents/NewDesignDoc/sprint3.tex
@@ -1,6 +1,6 @@
 % !TEX root = sprints_wrapper.tex
 
-This report will cover the backlog items completed in Sprint 3, the current protype's features, and team meeting summaries. 
+This report will cover the backlog items completed in Sprint 3, the current prototype's features, and team meeting summaries. 
 
  \subsection{Backlog Completed}
  I expanded upon the requirements section in the design document, and finished that section. The overview section was completed, and the design section of the document was started. My resume was also added to the resume appendix.
