--- a/Documents/NewDesignDoc/sprint4.tex
+++ b/Documents/NewDesignDoc/sprint4.tex
@@ -1,6 +1,6 @@
 % !TEX root = sprints_wrapper.tex
 
-This report will cover the backlog items completed in Sprint 4, the current protype's features, and client communication summaries. 
+This report will cover the backlog items completed in Sprint 4, the current prototype's features, and client communication summaries. 
 
  \subsection{Backlog Completed}
 \begin{itemize}
