--- a/Documents/NewDesignDoc/sprint5.tex
+++ b/Documents/NewDesignDoc/sprint5.tex
@@ -1,6 +1,6 @@
 % !TEX root = sprints_wrapper.tex
 
-This report will cover the backlog items completed in Sprint 5, the current protype's features, and client communication summaries. 
+This report will cover the backlog items completed in Sprint 5, the current prototype's features, and client communication summaries. 
 
  \subsection{Backlog Completed}
 \begin{itemize}
@@ -14,10 +14,10 @@ This report will cover the backlog items completed in Sprint 5, the current prot
 \subsection{Prototype Features}
 The following features were added to the prototype:
 \begin{itemize}
-\item Reporting interface in a seperate page: The reporting interface will contain fields specific to the event set selected, in addition to a map for selecting the location of the event and a photo upload interface.
-\item Event report table on main page: The table contains event details specific to the event set selected and username for the person submitting the event, as well as links to view all details of the event on a seperate page, and to center the map on that event marker. 
-\item Event reports map on main page: The map contails markers for all events in the event set. Clicking on a maker on the map will popup a bubble with event details, specific to the event set selected, which can be clicked on to navigate to all event details.
-\item Single event viewing in a seperate page: Clicking on the link icon associated with an event in the event table or on the event popup on the map will take the user to a seperate page will all details regarding the event.
+\item Reporting interface in a separate page: The reporting interface will contain fields specific to the event set selected, in addition to a map for selecting the location of the event and a photo upload interface.
+\item Event report table on main page: The table contains event details specific to the event set selected and username for the person submitting the event, as well as links to view all details of the event on a separate page, and to center the map on that event marker. 
+\item Event reports map on main page: The map contains markers for all events in the event set. Clicking on a maker on the map will pop-up a bubble with event details, specific to the event set selected, which can be clicked on to navigate to all event details.
+\item Single event viewing in a separate page: Clicking on the link icon associated with an event in the event table or on the event pop-up on the map will take the user to a separate page will all details regarding the event.
 \item Event image carousel on main page: The carousel will move through the first photo associated with each event set.
 \end{itemize}
 
@@ -30,4 +30,4 @@ The following features were added to the prototype:
 \end{itemize}
 
 \subsection{Sprint 5 Successes/Issues}
-The sprint was an overall sucess.  The prototype is essentially finished, no major changes should be needed. Documentation fell behind this sprint, additional effort will be put in between sprints 5 and 6 to catch up the documentation with where the prototype is at.
+The sprint was an overall success.  The prototype is essentially finished, no major changes should be needed. Documentation fell behind this sprint, additional effort will be put in between sprints 5 and 6 to catch up the documentation with where the prototype is at.
