--- a/Documents/NewDesignDoc/DesignDocument.tex
+++ b/Documents/NewDesignDoc/DesignDocument.tex
@@ -23,10 +23,10 @@
 \addcontentsline{toc}{chapter}{Contents}
 \listoffigures
 \addcontentsline{toc}{chapter}{List of Figures}
-\listoftables
-\addcontentsline{toc}{chapter}{List of Tables}
-\listofalgorithms
-\addcontentsline{toc}{chapter}{List of Algorithms}
+%%\listoftables
+%%\addcontentsline{toc}{chapter}{List of Tables}
+%%\listofalgorithms
+%%\addcontentsline{toc}{chapter}{List of Algorithms}
 
 \chapter{Overview Statements}
 \input{mission.tex}  % add mission statement to mission.tex
@@ -49,7 +49,7 @@
 \input{testing.tex}  %% All tracks
 \input{prototypes.tex}  %% All tracks
 %%\input{deploy.tex}  %% Normally not research track
-%%\input{userdocs.tex} %% All tracks
+\input{userdocs.tex} %% All tracks
 \input{refman.tex}  %% All tracks
 %%\input{businessplan.tex}   %% Entrepreneur track only 
 %%\input{log.tex}   %% Research track  only
@@ -74,6 +74,8 @@
 \appendix
 
 \input{revisions.tex} 
+
+\input{future.tex}
 
 \chapter{Product Description}
 \input{productdescription.tex}
