--- a/Documents/NewDesignDoc/prototypes.tex
+++ b/Documents/NewDesignDoc/prototypes.tex
@@ -3,7 +3,7 @@
 
 \chapter{Prototypes}
 
-This chapter records eaach prototype developed.  This section is a historical record of what was accomplished in the course of the project, organized according to Sprints.  This section contains the basic description of the sprint deliverable and what was accomplished.  
+This chapter records each prototype developed.  This section is a historical record of what was accomplished in the course of the project, organized according to Sprints.  This section contains the basic description of the sprint deliverable and what was accomplished.  
 
 \section{Sprint 1 Prototype}
 \subsection{Deliverable}
@@ -99,7 +99,7 @@ This sprint was a roaring success, overall. Early in the sprint, Jiasong Yan was
 
 \section{Sprint 5 Prototype}
 \subsection{Deliverable}
-Added map of events, event photos carousel, and event reports table to main page, shown here with data from the Landscape Change event set. See Figure~\ref{prototype_S5_main}, Figure~\ref{prototype_S5_table},  Figure~\ref{prototype_S5_map}, and  Figure~\ref{prototype_S5_imagecarousel}.  Added reporting interface, closeup images shown with fields corresponding to the Landscape Change event set, and an overall image shown with fields corresponding to the Bird Sighting event set. See Figure~\ref{prototype_S5_report_1}, Figure~\ref{prototype_S5_report_2}, and Figure~\ref{prototype_S5_report}. Added interface to view single event. See Figure~\ref{prototype_S5_view}.
+Added map of events, event photos carousel, and event reports table to main page, shown here with data from the Landscape Change event set. See Figure~\ref{prototype_S5_main}, Figure~\ref{prototype_S5_table},  Figure~\ref{prototype_S5_map}, and  Figure~\ref{prototype_S5_imagecarousel}.  Added reporting interface, close-up images shown with fields corresponding to the Landscape Change event set, and an overall image shown with fields corresponding to the Bird Sighting event set. See Figure~\ref{prototype_S5_report_1}, Figure~\ref{prototype_S5_report_2}, and Figure~\ref{prototype_S5_report}. Added interface to view single event. See Figure~\ref{prototype_S5_view}.
 
 \begin{figure}[tbh]
 \begin{center}
@@ -160,5 +160,5 @@ Added map of events, event photos carousel, and event reports table to main page
 \subsection{Backlog}
 Backlog completed this sprint was primarily in the form of prototype features added: implementation of event reports table, event reports map, and event set photo carousel on the main page; implementation of reporting interface specific to each event set; and interface to view an individual event. In addition, photos associated with events were also added to the database.
 \subsection{Success/Fail}
-The sprint was an overall sucess.  The prototype is essentially finished, no major changes should be needed. Documentation fell behind this sprint.
+The sprint was an overall success.  The prototype is essentially finished, no major changes should be needed. Documentation fell behind this sprint.
 
