--- a/Documents/NewDesignDoc/revisions.tex
+++ b/Documents/NewDesignDoc/revisions.tex
@@ -5,7 +5,7 @@
 This chapter includes information about the project revisions made regarding the removal of Jiasong Yan from the project in January 2016. Major content changes are listed here, other minor changes are noted in the rest of the document.
 
 \section{Overview and Concept of Operations}
-Team member revisions are noted in the ``Team Members and Team Name'' section.  Figure~\ref{overviewdesign_orginal} was replaced with Figure~\ref{overviewdesign}. The ``Event Set Editing'' subsection in the Major Components Section was removed. The remainder of the chapter was similarily revised to exclude this subsection.
+Team member revisions are noted in the ``Team Members and Team Name'' section.  Figure~\ref{overviewdesign_orginal} was replaced with Figure~\ref{overviewdesign}. The ``Event Set Editing'' subsection in the Major Components Section was removed. The remainder of the chapter was similarly revised to exclude this subsection.
 
 \subsection{Team Members and Team Name}
 Original team members were Jiasong Yan and Hannah Aker.
@@ -24,15 +24,15 @@ Administrators can edit existing events sets to refine what users report, and cr
 User Stories \#4 and \#5 were removed from this chapter. Subsections ``Administrator editing of existing events'' and ``Administrator customization of event sets'' were removed from the Product Backlog section.
 
 \subsection{User Story \#4} 
-As an administrator, I want to be able to customize a set of events to fit my needs. This may include user input and display items, database design, digital map, webpage color and style, logo, etc. 
+As an administrator, I want to be able to customize a set of events to fit my needs. This may include user input and display items, database design, digital map, web-page color and style, logo, etc. 
 \subsection{User Story \#5} 
 As an administrator, I want to be able to edit existing event reports.
 
 \subsection{Administrator editing of existing events}
 \begin{itemize}
-\item The detailed data list shall be displayed in a seperate window.
+\item The detailed data list shall be displayed in a separate window.
 \item Each event report in the list will have an ``edit'' button.
-\item When an administrator clicks the ``edit'' button, they will be taken to the event reporting interface, with the added feild ``Reason for editing''.
+\item When an administrator clicks the ``edit'' button, they will be taken to the event reporting interface, with the added filed ``Reason for editing''.
 \item When an administrator edits an event report, the administrator name, reason for editing, and date and time shall be recorded and added to the event's history.
 \item An administrator may mark an event report as false, the administrator name, reason for declaring false, and date and time shall be added to the event's history.
 \end{itemize}
@@ -44,9 +44,9 @@ As an administrator, I want to be able to edit existing event reports.
 \item When the administrator clicks on the new event data set, a blank event data set will be created. 
 \item The display name and identification name of an event data set cannot be empty or null.
 \item The identification name will be used to reference the database, and cannot be changed after creation.
-\item The administrator will be able to add feilds to their event data set by clicking an ``Add new Feild'' button.
-\item The administrator will be able to designate the feild identification name, display name, data type, display method if appliciable, and acceptable values if appliciable. 
-\item If the administrator wants to change the data type of the feild, they will need to remove the current feild and recreate it with the new data type, and data stored in the previous type will be lost.
+\item The administrator will be able to add fields to their event data set by clicking an ``Add new Field'' button.
+\item The administrator will be able to designate the field identification name, display name, data type, display method if applicable, and acceptable values if applicable. 
+\item If the administrator wants to change the data type of the field, they will need to remove the current field and recreate it with the new data type, and data stored in the previous type will be lost.
 \item The administrator will be able to edit display name, display method, and acceptable values with ease.
 \item The data types that can be selected will be number, short text, long text, radio button group, check box group, and picture upload.
 \item When the administrator is finished editing or creating their event data set, they will be able to click ``save'' to save their data. 
@@ -60,4 +60,4 @@ Originally, Hannah Aker was the team leader and scrum master, and Jiasong Yan wa
 \subsection{Management or Instructor (Scrum Master)}
 Originally, the scrum master in this project was Hannah Aker, who conducted sprint meetings and handled most client contact. Currently, there is no need for the role of scrum master to be assigned, Hannah Aker is fulfilling all team roles.
 \subsection{Developers --Testers}
-Originally developers and testers were Jiasong Yan and Hannah Aker. Currently, Hannah Aker fulfills all team roles. When the project is beta tested, testers may include SDSMT faculty and students, with faculty as administrators and students as ordinary users reporting events.
+Originally developers and testers were Jiasong Yan and Hannah Aker. Currently, Hannah Aker fulfils all team roles. When the project is beta tested, testers may include SDSMT faculty and students, with faculty as administrators and students as ordinary users reporting events.
