--- a/Documents/NewDesignDoc/sprint2.tex
+++ b/Documents/NewDesignDoc/sprint2.tex
@@ -1,12 +1,12 @@
 % !TEX root = sprints_wrapper.tex
 
-This report will cover the backlog items completed in Sprint 2, the current protype's features, and team meeting summaries. 
+This report will cover the backlog items completed in Sprint 2, the current prototypes features, and team meeting summaries. 
 
  \subsection{Backlog Completed}
- We completed our initial analysis of the previous project, the Landscape Change Mapper. Jiasong expanded upon our initial protoype to include layouts for the login, register, and administration webpages. After that was completed, Hannah worked on transporting code for the register and login functions from the old project LCM. This was then lightly tested, and functioned similarly to the same functions on the LCM project. More extensive testing will take place in Sprint 3. Hannah continued to expand on the requirements section, fully defining the exact requirements for the login and register pages. In the documentation, the project and mission/elevator sections were completed. 
+ We completed our initial analysis of the previous project, the Landscape Change Mapper. Jiasong expanded upon our initial prototype to include layouts for the login, register, and administration web-pages. After that was completed, Hannah worked on transporting code for the register and login functions from the old project LCM. This was then lightly tested, and functioned similarly to the same functions on the LCM project. More extensive testing will take place in Sprint 3. Hannah continued to expand on the requirements section, fully defining the exact requirements for the login and register pages. In the documentation, the project and mission/elevator sections were completed. 
  
  \subsection{Prototype Features}
- The prototype now has features that allow a user to register for a new account or log in with thier current account. The look and feel of the prototype were also updated to resemble the original LCM project.
+ The prototype now has features that allow a user to register for a new account or log in with their current account. The look and feel of the prototype were also updated to resemble the original LCM project.
  
  \subsection{Meetings}
 \begin{itemize}
@@ -17,7 +17,7 @@ This report will cover the backlog items completed in Sprint 2, the current prot
 \subsection{Client Communication}
 \begin{itemize}
 \item10/15: Hannah emailed Gail and Dr. Qiao concerning the connection issues with the server. Gail was able to communicate with the cloud host administrator to get the cloud server back up and running. The IP address of the server had changed in the restarting of the server, and the Apache 2.0 server had to be restarted. The server is now running smoothly.
-\item10/27: presented sprint 1 review presentation to Dr. Qiao, some feed back regarding testing. We plan to implement a traceibility matrix.
+\item10/27: presented sprint 1 review presentation to Dr. Qiao, some feed back regarding testing. We plan to implement a traceability matrix.
 \end{itemize}
 
 \subsection{Sprint 3 Backlog}
